--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,3 +26,10 @@ build:
     - python manage.py migrate
   only:
     - backend
+
+test:
+  stage: test
+  script:
+    - python manage.py test
+  only:
+    - backend
