--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,15 +28,15 @@ before_script:
 build:
   stage: build
   script:
+    - pip install -r requirements.txt
     - python manage.py migrate
-    # Add additional build steps if needed
   only:
     - backend
 
 test:
   stage: test
   script:
+    - pip install -r requirements.txt
     - python manage.py test
-    # Add additional test steps if needed
   only:
     - backend
