--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,42 +1,29 @@
 # .gitlab-ci.yml
 
-# Define the stages of the pipeline
+# Définir les étapes du pipeline
 stages:
   - build
   - test
 
-# Define global variables for PostgreSQL configuration
+# Définir les variables globales pour la configuration de PostgreSQL
 variables:
   POSTGRES_DB: "CFTdatabase"
   POSTGRES_USER: "postgres"
   POSTGRES_PASSWORD: "SopraHR2024++"
 
-# Define services used by the pipeline
-services:
-  - name: postgres:latest
-    alias: postgres
-
-# Define scripts to be executed before each job
-before_script:
-  # Install Python dependencies and set up virtual environment
-  - python -m venv venv
-  - venv\Scripts\activate
-  - pip install -r requirements.txt
-
-# Define individual jobs for the pipeline
-# Each job belongs to a specific stage and executes a set of scripts
+# Définir les travaux individuels pour le pipeline
+# Chaque travail appartient à une étape spécifique et exécute un ensemble de scripts
 build:
   stage: build
   script:
-    - python manage.py migrate
-    # Add additional build steps if needed
+    - pip install -r C:\Users\fguent\cft\requirements.txt   # Installer les dépendances du projet répertoriées dans requirements.txt
+    - python manage.py migrate  # Exécuter les migrations de base de données
   only:
-    - backend
-
+    - backend 
 test:
   stage: test
   script:
-    - python manage.py test
-    # Add additional test steps if needed
+    - pip install -r C:\Users\fguent\cft\requirements.txt  # Installer les dépendances du projet répertoriées dans requirements.txt
+    - python manage.py test  # Exécuter les tests Django
   only:
-    - backend 
+    - backend
