--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,14 +9,18 @@ variables:
   POSTGRES_USER: "postgres"
   POSTGRES_PASSWORD: "SopraHR2024++"
 
+# Define services to be used by the pipeline
 services:
-  - postgres:latest
+  - name: postgres:latest
 
+# Define scripts to be executed before each job
 before_script:
-  - python -m venv venv
-  - venv\Scripts\activate
-  - pip install -r requirements.txt
+  - apk add --no-cache python3 py3-pip  # Install Python and pip
+  - python3 -m venv venv                # Create a virtual environment
+  - source venv/bin/activate            # Activate the virtual environment
+  - pip install -r requirements.txt     # Install project dependencies
 
+# Define individual jobs for the pipeline
 build:
   stage: build
   script:
