--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,22 +9,21 @@ variables:
   POSTGRES_USER: "postgres"
   POSTGRES_PASSWORD: "SopraHR2024++"
 
+# Define services used by the pipeline
 services:
-  - postgres:latest
+  - name: postgres:latest
 
-# Install Python and required packages
+# Define scripts to be executed before each job
 before_script:
-  - apk add --no-cache python3 py3-pip
-  - pip3 install virtualenv
+  - python -m venv venv
+  - source venv/bin/activate
+  - pip install -r requirements.txt
 
 # Define individual jobs for the pipeline
 # Each job belongs to a specific stage and executes a set of scripts
 build:
   stage: build
   script:
-    - python3 -m venv venv
-    - source venv/bin/activate
-    - pip install -r requirements.txt
     - python manage.py migrate
   only:
     - backend
@@ -32,7 +31,6 @@ build:
 test:
   stage: test
   script:
-    - source venv/bin/activate
     - python manage.py test
   only:
     - backend
