--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ services:
 
 # Define scripts to be executed before each job
 before_script:
-  - python -m venv venv
+  - apk add --no-cache python3 py3-pip
+  - python3 -m venv venv
   - source venv/bin/activate
   - pip install -r requirements.txt
 
