--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,11 +15,11 @@ services:
 
 # Define scripts to be executed before each job
 before_script:
-  - apk add --no-cache python3 py3-pip
+before_script:
+  - apk add --no-cache python3 py3-dev # Replace py3-pip with py3-dev
   - python3 -m venv venv
   - source venv/bin/activate
   - pip install -r requirements.txt
-
 # Define individual jobs for the pipeline
 # Each job belongs to a specific stage and executes a set of scripts
 build:
