--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ services:
 # Define scripts to be executed before each job
 before_script:
 before_script:
-  - apk add --no-cache python3 py3-dev # Replace py3-pip with py3-dev
+  - apk add --no-cache --timeout 60 python3 py3-dev # Replace py3-pip with py3-dev
   - python3 -m venv venv
   - source venv/bin/activate
   - pip install -r requirements.txt
