--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,11 +20,11 @@ build:
   script:
     - python manage.py migrate
   only:
-    - main
+    - backend
 
 test:
   stage: test
   script:
     - python manage.py test
   only:
-    - main
+    - backend
