--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,9 +19,9 @@ stages:
     - python manage.py migrate  # Apply database migrations
 
 build:
-  <<: *default_template
   stage: build
   script:
     - python manage.py migrate
+  only:
   only:
     - backend
