--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,14 +14,14 @@ stages:
         POSTGRES_PASSWORD: "SopraHR2024++"
   before_script:
     - apk update && apk add --no-cache postgresql-dev gcc python3-dev musl-dev  # Install PostgreSQL dependencies
-    - pip install --upgrade pip  # Upgrade pip
-    - pip install -r requirements.txt  # Install Python dependencies
+    - python -m pip install --upgrade pip  # Upgrade pip
+    - python -m pip install -r requirements.txt  # Install Python dependencies
     - python manage.py migrate  # Apply database migrations
 
 build:
+
   stage: build
   script:
     - python manage.py migrate
-  only:
   only:
     - backend
