--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@
 stages:
   - build
   - test
-# Define job templates
 .default_template: &default_template
   services:
     - name: postgres:latest  # Use latest PostgreSQL image as a service
@@ -12,10 +11,11 @@ stages:
         POSTGRES_USER: "postgres"
         POSTGRES_PASSWORD: "SopraHR2024++"
   before_script:
-    - apk update && apk add --no-cache postgresql-dev gcc python3-dev musl-dev  # Install PostgreSQL dependencies
-    - python -m pip install --upgrade pip  # Upgrade pip
-    - python -m pip install -r requirements.txt  # Install Python dependencies
-    - python manage.py migrate  # Apply database migrations
+    - apk update && apk add --no-cache postgresql-dev gcc python3 python3-dev musl-dev  # Install PostgreSQL dependencies and Python
+    - python3 -m ensurepip  # Ensure pip is installed
+    - python3 -m pip install --upgrade pip  # Upgrade pip
+    - python3 -m pip install -r requirements.txt  # Install Python dependencies
+    - python3 manage.py migrate  # Apply database migrations
 
 build:
   stage: build
