--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,20 +2,12 @@
 stages:
   - build
   - test
-.default_template: &default_template
-  services:
-    - name: postgres:latest  # Use latest PostgreSQL image as a service
-      alias: postgres
-      environment:
-        POSTGRES_DB: "CFTdatabase"
-        POSTGRES_USER: "postgres"
-        POSTGRES_PASSWORD: "SopraHR2024++"
-  before_script:
-    - apk update && apk add --no-cache postgresql-dev gcc python3 python3-dev musl-dev  # Install PostgreSQL dependencies and Python
-    - python3 -m ensurepip  # Ensure pip is installed
-    - python3 -m pip install --upgrade pip  # Upgrade pip
-    - python3 -m pip install -r requirements.txt  # Install Python dependencies
-    - python3 manage.py migrate  # Apply database migrations
+
+# Define job templates
+variables:
+  POSTGRES_DB: "CFTdatabase"
+  POSTGRES_USER: "postgres"
+  POSTGRES_PASSWORD: "SopraHR2024++"
 
 build:
   stage: build
@@ -23,9 +15,22 @@ build:
     - python manage.py migrate
   only:
     - backend
+
 test:
+  services:
+    - postgres:16.2
+  cache:
+    key:
+      files:
+        - requirements.txt
+      prefix: ${CI_JOB_NAME}
+    paths:
+      - venv
+      - .cache/pip
   stage: test
   script:
+    - python -m venv venv
+    - . venv/bin/activate
+    - pip install --upgrade pip
+    - pip install -r requirements.txt
     - python manage.py test
-  only:
-    - backend
