--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 # Define stages for the pipeline
 stages:
   - build
+  - test
 
 # Define job templates
 variables:
@@ -12,6 +13,16 @@ build:
   stage: build
   image: python:3.12.2
   script:
+    - pip install Django==5.0.3  # Install Django
     - python manage.py migrate
+  only:
+    - backend
+
+test:
+  stage: test
+  image: python:3.12.2
+  script:
+    - pip install -r requirements.txt
+    - python manage.py test
   only:
     - backend
