--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,9 @@ test:
   stage: test
   image: python:3.12.2
   script:
+    - python -m venv venv
+    - . venv/bin/activate
+    - pip install --upgrade pip
     - pip install -r requirements.txt
     - python manage.py test
   only:
