--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,10 @@ build:
   stage: build
   image: python:3.12.2
   script:
+    - python -m venv venv  # Create a virtual environment
+    - . venv/bin/activate  # Activate the virtual environment
+    - pip install --upgrade pip  # Upgrade pip
+    - pip install -r requirements.txt  # Install dependencies
     - python manage.py migrate
   only:
     - backend
@@ -21,10 +25,10 @@ test:
   stage: test
   image: python:3.12.2
   script:
-    - python -m venv venv
-    - . venv/bin/activate
-    - pip install --upgrade pip
-    - pip install -r requirements.txt
+    - python -m venv venv  # Create a virtual environment
+    - . venv/bin/activate  # Activate the virtual environment
+    - pip install --upgrade pip  # Upgrade pip
+    - pip install -r requirements.txt  # Install dependencies
     - python manage.py test
   only:
     - backend
