--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,23 @@
-# Define stages for the pipeline
 stages:
-  - build
   - test
 
-# Define job templates
 variables:
   POSTGRES_DB: "CFTdatabase"
   POSTGRES_USER: "postgres"
   POSTGRES_PASSWORD: "SopraHR2024++"
 
-build:
-  stage: build
-  image: python:3.12.2
-  script:
-    - python -m venv venv  # Create a virtual environment
-    - . venv/bin/activate  # Activate the virtual environment
-    - pip install --upgrade pip  # Upgrade pip
-    - pip install -r requirements.txt  # Install dependencies
-    - python manage.py migrate
-  only:
-    - backend
-
 test:
+  services:
+    - postgres:14.2
+  cache:
+    key:
+      files:
+        - requirements.txt
+      prefix: ${CI_JOB_NAME}
+    paths:
+      - .cache/pip
   stage: test
-  image: python:3.12.2
   script:
-    - python -m venv venv  # Create a virtual environment
-    - . venv/bin/activate  # Activate the virtual environment
-    - pip install --upgrade pip  # Upgrade pip
-    - pip install -r requirements.txt  # Install dependencies
+    - pip install --upgrade pip
+    - pip install -r requirements.txt
     - python manage.py test
-  only:
-    - backend
